--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "flatlist-react": "^1.4.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-html5-camera-photo": "^1.5.4",
     "react-icons": "^3.11.0",
     "react-lottie": "^1.2.3",
     "react-router-dom": "^5.2.0",
